fixing disqus visibility

--- a/themes/data-science/static/css/style.css
+++ b/themes/data-science/static/css/style.css
@@ -1152,6 +1152,7 @@ footer{
 
 .disqus-comments{
   max-height: 600px;
+  width: 100%;
   overflow: hidden;
   transition: var(--fastFade);
 }
